// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBox renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-box: 0;
  mask-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 0;
  mask-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 0;
  mask-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 0;
  mask-box: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-box: hasnot;
  mask-box: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: has;
  mask-box: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: hasnot;
  mask-box: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: has;
  mask-box: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box: invalid.path.1;
  mask-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: invalid.path.1;
  mask-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: invalid.path.1;
  mask-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: invalid.path.1;
  mask-box: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-box: -54881;
  mask-box: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: -54881;
  mask-box: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: -42365;
  mask-box: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: -42365;
  mask-box: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: July;
    mask-box: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: September;
    mask-box: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: July;
    mask-box: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: September;
    mask-box: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: May;
    mask-box: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: June;
    mask-box: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: April;
    mask-box: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: May;
    mask-box: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: June;
    mask-box: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box: April;
    mask-box: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-box: July;
    mask-box: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box: September;
    mask-box: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-box: July;
    mask-box: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box: September;
    mask-box: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: November;
    mask-box: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box: August;
    mask-box: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box: January;
    mask-box: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: December;
    mask-box: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box: April;
    mask-box: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: May;
    mask-box: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box: June;
    mask-box: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box: January;
    mask-box: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: December;
    mask-box: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box: April;
    mask-box: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box: May;
    mask-box: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box: June;
    mask-box: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-box: 54881;
  mask-box: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 54881;
  mask-box: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 42365;
  mask-box: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: 42365;
  mask-box: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-box: July;
  mask-box: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: July;
  mask-box: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: June;
  mask-box: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: June;
  mask-box: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBox renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box: DarkSlateBlue;
  mask-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: DarkSlateBlue;
  mask-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: DarkSlateBlue;
  mask-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box: DarkSlateBlue;
  mask-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
